--- a/plex/build.yaml
+++ b/plex/build.yaml
@@ -1,5 +1,10 @@
----
+build_from_template:
+  image: linuxserver/plex
+  version: 1.28.1.6104-788f82488-ls128
 build_from:
-  aarch64: ghcr.io/hassio-addons/ubuntu-base/aarch64:8.0.0
-  amd64: ghcr.io/hassio-addons/ubuntu-base/amd64:8.0.0
-  armv7: ghcr.io/hassio-addons/ubuntu-base/armv7:8.0.0
+  armhf: linuxserver/plex:arm32v7-1.28.1.6104-788f82488-ls128
+  aarch64: linuxserver/plex:arm64v8-1.28.1.6104-788f82488-ls128
+  amd64: linuxserver/plex:amd64-1.28.1.6104-788f82488-ls128
+
+squash: false
+args: {}
