--- a/transmission/config.yaml
+++ b/transmission/config.yaml
@@ -3,7 +3,7 @@ version: 0.1.0
 slug: transmission
 legacy: false
 init: false
-# image: c0m4/hassio-transmission-{arch}
+image: c0m4/hassio-transmission-{arch}
 description: A fork of Sonarr to work with movies à la Couchpotato
 url: https://github.com/attiasr/hassio-addons/tree/master/transmission#readme
 startup: services
